# nkipy

./: README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  generate_api_docs.py  index.md  installation.md  quickstart.md
docs/api/: core.md  distributed.md  index.md  ops.md  runtime.md
examples/models/qwen3_embedding/: .gitignore  README.md  __init__.py  config.py  example_retrieval.py  layer.py  model.py  prepare_weights.py  test.sh
examples/models/qwen3_embedding/kernels/: attention.py  ffn.py  rmsnorm.py  transformer_layer.py
nkipy/src/nkipy/core/backend/: hlo.py
nkipy/src/nkipy/runtime/: device_kernel.py
spike/: pyproject.toml
spike-torch/: README.md  pyproject.toml  setup.py
spike-torch/csrc/: python_bindings.cpp  spike_allocator.cpp  spike_bindings.cpp  spike_device.cpp  spike_hooks.cpp  spike_storage_impl.cpp  spike_tensor_impl.cpp
spike-torch/csrc/include/: spike_allocator.h  spike_device.h  spike_guard_impl.h  spike_hooks.h  spike_storage_impl.h  spike_tensor_impl.h  spike_torch.h
spike-torch/src/spike_torch/: __init__.py  device.py  execution.py
spike-torch/tests/: __init__.py  conftest.py  test_allocator.py  test_copy.py  test_device.py  test_integration.py  test_parity.py  test_performance.py  test_resize.py  test_tensor_creation.py  test_view_ops.py
spike/src/spike/: cli.py
tests/unit/: test_tensor_api.py
torch-to-nkipy/: README.md  pyproject.toml  setup.py
torch-to-nkipy/csrc/: README.md  nkipy_device.cpp  nkipy_device.h  nkipy_hooks.cpp  nkipy_hooks.h  nkipy_tensor.cpp  nkipy_tensor.h  nkipy_tensor_allocator.cpp  nkipy_tensor_allocator.h  python_bindings.cpp  torch_register.cpp  torch_register.h
torch-to-nkipy/examples/basics/: example_basic.py  example_dist.py  example_dist.sh  example_hybrid_exe.py  example_nki_op.py
torch-to-nkipy/examples/hf_llama/: example_llama_1b.sh  example_llama_70b_tp32.sh  hf_distributed_utils.py  hf_model_inference.py  hf_model_inference_dtensor.py  hf_utils.py
torch-to-nkipy/src/torch_to_nkipy/: __init__.py
torch-to-nkipy/src/torch_to_nkipy/backend/: nkipy_backend.py  nkipy_backend_config.py
torch-to-nkipy/src/torch_to_nkipy/device/: __init__.py  device_module.py  distributed_backend.py
torch-to-nkipy/src/torch_to_nkipy/nkipy_builder/: nkipy_ast.py  nkipy_builder.py  nkipy_kernel.py
torch-to-nkipy/src/torch_to_nkipy/nkipy_builder/aten_op_registry/: __init__.py  aten_abs.py  aten_add.py  aten_addmm.py  aten_alias.py  aten_any.py  aten_arange.py  aten_argmax.py  aten_argmin.py  aten_bitwise_not.py  aten_cat.py  aten_clamp.py  aten_clone.py  aten_collective.py  aten_constant_pad_nd.py  aten_copy.py  aten_cumprod.py  aten_cumsum.py  aten_custom_ops.py  aten_embedding.py  aten_empty_permuted.py  aten_expand.py  aten_full.py  aten_full_like.py  aten_gather.py  aten_gelu.py  aten_getitem.py  aten_hardtanh.py  aten_index.py  aten_index_put.py  aten_index_select.py  aten_leaky_relu.py  aten_lift_fresh_copy.py  aten_linalg_vector_norm.py  aten_log.py  aten_log1p.py  aten_log_softmax.py  aten_max.py  aten_mean.py  aten_min.py  (+23 more)
torch-to-nkipy/src/torch_to_nkipy/runtime/: runtime.py
torch-to-nkipy/src/torch_to_nkipy/utils/: dtype.py  graph.py  name.py  nki.py  ntff_meta.py  ops.py  target.py
torch-to-nkipy/tests/: base.py  conftest.py
torch-to-nkipy/tests/ops/: test_aten_abs.py  test_aten_add.py  test_aten_addmm.py  test_aten_alias.py  test_aten_any.py  test_aten_any_dim.py  test_aten_arange_start_step.py  test_aten_argmax.py  test_aten_argmin.py  test_aten_bitwise.py  test_aten_bitwise_not.py  test_aten_bmm.py  test_aten_cat.py  test_aten_clamp.py  test_aten_clone.py  test_aten_constant_pad_nd.py  test_aten_copy.py  test_aten_cos.py  test_aten_cumprod.py  test_aten_cumsum.py  test_aten_div.py  test_aten_embedding.py  test_aten_empty_permuted.py  test_aten_eq.py  test_aten_expand.py  test_aten_floor.py  test_aten_full.py  test_aten_full_like.py  test_aten_gather.py  test_aten_ge_scalar.py  test_aten_ge_tensor.py  test_aten_gelu.py  test_aten_gt.py  test_aten_gt_scalar.py  test_aten_hard_tanh.py  test_aten_index.py  test_aten_index_select.py  test_aten_le.py  test_aten_leaky_relu.py  test_aten_lift_fresh_copy.py  (+48 more)
