# NKIPy Monorepo

[project]
name = "nkipy-workspace"
version = "0.1.0"
description = "NKIPy Monorepo - A lightweight Pythonic kernel environment for AWS Neuron"
requires-python = ">=3.10"
dependencies = ["nkipy"]

[tool.uv.workspace]
members = ["nkipy", "spike", "torch-to-nkipy"]

[[tool.uv.index]]
name = "neuron"
url = "https://pip.repos.neuron.amazonaws.com"
explicit = true

[tool.uv.sources]
spike = { workspace = true }
nkipy = { workspace = true }
torch-to-nkipy = { workspace = true }

[dependency-groups]
dev = ["spike"]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-order>=1.0",
    "pytest-xdist>=3.0",
    "ruff",
    "mypy",
]
examples = [
    "torch",
    "ipython",
    "transformers",
    "argparse",
    "safetensors",
    "accelerate",
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "myst-parser",
    "myst-nb",
    "sphinx-autodoc-typehints",
]
torch-to-nkipy = [
    "torch-to-nkipy",
    "torch==2.8.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers==4.56.1",
    "tabulate",
    "sentencepiece",
]

[tool.ruff]
line-length = 88
exclude = ["build", "third-party"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests", "spike/tests", "torch-to-nkipy/tests"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "neuronxcc.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["nkipy/src/nkipy", "spike/src/spike", "torch-to-nkipy/src/torch_to_nkipy"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
